# tag-generator

./: Cargo.toml  LICENSE  README.md
.idx/: dev.nix
dictionaries/: custom.txt
src/: main.rs  test.rs  util.rs
